--- a/notebooks/har_tf.ipynb
+++ b/notebooks/har_tf.ipynb
@@ -3188,7 +3188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 55,
    "metadata": {
     "scrolled": true
    },
@@ -3197,116 +3197,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Feature shape: (1788, 27)\n"
+      "Feature shape: (2010, 227)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-03-08 16:07:09.546943: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:939] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2022-03-08 16:07:09.577190: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudnn.so.8'; dlerror: libcudnn.so.8: cannot open shared object file: No such file or directory\n",
-      "2022-03-08 16:07:09.577207: W tensorflow/core/common_runtime/gpu/gpu_device.cc:1850] Cannot dlopen some GPU libraries. Please make sure the missing libraries mentioned above are installed properly if you would like to use GPU. Follow the guide at https://www.tensorflow.org/install/gpu for how to download and setup the required libraries for your platform.\n",
-      "Skipping registering GPU devices...\n",
-      "2022-03-08 16:07:09.577641: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+      "/usr/local/lib/python3.8/dist-packages/sklearn/preprocessing/_data.py:461: RuntimeWarning: All-NaN slice encountered\n",
+      "  data_min = np.nanmin(X, axis=0)\n",
+      "/usr/local/lib/python3.8/dist-packages/sklearn/preprocessing/_data.py:462: RuntimeWarning: All-NaN slice encountered\n",
+      "  data_max = np.nanmax(X, axis=0)\n"
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/40\n",
-      "143/143 [==============================] - 1s 2ms/step - loss: 0.4978 - categorical_accuracy: 0.5776 - val_loss: 0.4536 - val_categorical_accuracy: 0.6006\n",
-      "Epoch 2/40\n",
-      "143/143 [==============================] - 0s 853us/step - loss: 0.4475 - categorical_accuracy: 0.5839 - val_loss: 0.4393 - val_categorical_accuracy: 0.6006\n",
-      "Epoch 3/40\n",
-      "143/143 [==============================] - 0s 803us/step - loss: 0.4371 - categorical_accuracy: 0.5839 - val_loss: 0.4294 - val_categorical_accuracy: 0.6006\n",
-      "Epoch 4/40\n",
-      "143/143 [==============================] - 0s 874us/step - loss: 0.4299 - categorical_accuracy: 0.5839 - val_loss: 0.4238 - val_categorical_accuracy: 0.6006\n",
-      "Epoch 5/40\n",
-      "143/143 [==============================] - 0s 812us/step - loss: 0.4257 - categorical_accuracy: 0.5839 - val_loss: 0.4192 - val_categorical_accuracy: 0.6006\n",
-      "Epoch 6/40\n",
-      "143/143 [==============================] - 0s 809us/step - loss: 0.4216 - categorical_accuracy: 0.5839 - val_loss: 0.4155 - val_categorical_accuracy: 0.6006\n",
-      "Epoch 7/40\n",
-      "143/143 [==============================] - 0s 786us/step - loss: 0.4185 - categorical_accuracy: 0.5839 - val_loss: 0.4124 - val_categorical_accuracy: 0.6006\n",
-      "Epoch 8/40\n",
-      "143/143 [==============================] - 0s 785us/step - loss: 0.4161 - categorical_accuracy: 0.5839 - val_loss: 0.4106 - val_categorical_accuracy: 0.6006\n",
-      "Epoch 9/40\n",
-      "143/143 [==============================] - 0s 787us/step - loss: 0.4141 - categorical_accuracy: 0.5832 - val_loss: 0.4083 - val_categorical_accuracy: 0.6006\n",
-      "Epoch 10/40\n",
-      "143/143 [==============================] - 0s 788us/step - loss: 0.4123 - categorical_accuracy: 0.5839 - val_loss: 0.4068 - val_categorical_accuracy: 0.6006\n",
-      "Epoch 11/40\n",
-      "143/143 [==============================] - 0s 791us/step - loss: 0.4108 - categorical_accuracy: 0.5832 - val_loss: 0.4052 - val_categorical_accuracy: 0.6006\n",
-      "Epoch 12/40\n",
-      "143/143 [==============================] - 0s 797us/step - loss: 0.4094 - categorical_accuracy: 0.5832 - val_loss: 0.4038 - val_categorical_accuracy: 0.6006\n",
-      "Epoch 13/40\n",
-      "143/143 [==============================] - 0s 783us/step - loss: 0.4082 - categorical_accuracy: 0.5839 - val_loss: 0.4030 - val_categorical_accuracy: 0.6006\n",
-      "Epoch 14/40\n",
-      "143/143 [==============================] - 0s 813us/step - loss: 0.4071 - categorical_accuracy: 0.5832 - val_loss: 0.4016 - val_categorical_accuracy: 0.6006\n",
-      "Epoch 15/40\n",
-      "143/143 [==============================] - 0s 787us/step - loss: 0.4059 - categorical_accuracy: 0.5832 - val_loss: 0.4011 - val_categorical_accuracy: 0.6006\n",
-      "Epoch 16/40\n",
-      "143/143 [==============================] - 0s 795us/step - loss: 0.4052 - categorical_accuracy: 0.5832 - val_loss: 0.3998 - val_categorical_accuracy: 0.6006\n",
-      "Epoch 17/40\n",
-      "143/143 [==============================] - 0s 801us/step - loss: 0.4043 - categorical_accuracy: 0.5832 - val_loss: 0.3990 - val_categorical_accuracy: 0.6006\n",
-      "Epoch 18/40\n",
-      "143/143 [==============================] - 0s 766us/step - loss: 0.4035 - categorical_accuracy: 0.5853 - val_loss: 0.3982 - val_categorical_accuracy: 0.6006\n",
-      "Epoch 19/40\n",
-      "143/143 [==============================] - 0s 792us/step - loss: 0.4027 - categorical_accuracy: 0.5853 - val_loss: 0.3975 - val_categorical_accuracy: 0.6006\n",
-      "Epoch 20/40\n",
-      "143/143 [==============================] - 0s 789us/step - loss: 0.4021 - categorical_accuracy: 0.5923 - val_loss: 0.3966 - val_categorical_accuracy: 0.6006\n",
-      "Epoch 21/40\n",
-      "143/143 [==============================] - 0s 805us/step - loss: 0.4014 - categorical_accuracy: 0.5916 - val_loss: 0.3961 - val_categorical_accuracy: 0.6034\n",
-      "Epoch 22/40\n",
-      "143/143 [==============================] - 0s 780us/step - loss: 0.4008 - categorical_accuracy: 0.5937 - val_loss: 0.3956 - val_categorical_accuracy: 0.6173\n",
-      "Epoch 23/40\n",
-      "143/143 [==============================] - 0s 786us/step - loss: 0.4002 - categorical_accuracy: 0.6203 - val_loss: 0.3949 - val_categorical_accuracy: 0.6117\n",
-      "Epoch 24/40\n",
-      "143/143 [==============================] - 0s 802us/step - loss: 0.3997 - categorical_accuracy: 0.6168 - val_loss: 0.3944 - val_categorical_accuracy: 0.6313\n",
-      "Epoch 25/40\n",
-      "143/143 [==============================] - 0s 777us/step - loss: 0.3991 - categorical_accuracy: 0.6287 - val_loss: 0.3938 - val_categorical_accuracy: 0.6397\n",
-      "Epoch 26/40\n",
-      "143/143 [==============================] - 0s 793us/step - loss: 0.3986 - categorical_accuracy: 0.6266 - val_loss: 0.3933 - val_categorical_accuracy: 0.6425\n",
-      "Epoch 27/40\n",
-      "143/143 [==============================] - 0s 801us/step - loss: 0.3981 - categorical_accuracy: 0.6434 - val_loss: 0.3929 - val_categorical_accuracy: 0.6480\n",
-      "Epoch 28/40\n",
-      "143/143 [==============================] - 0s 792us/step - loss: 0.3977 - categorical_accuracy: 0.6315 - val_loss: 0.3925 - val_categorical_accuracy: 0.6564\n",
-      "Epoch 29/40\n",
-      "143/143 [==============================] - 0s 799us/step - loss: 0.3972 - categorical_accuracy: 0.6538 - val_loss: 0.3920 - val_categorical_accuracy: 0.6536\n",
-      "Epoch 30/40\n",
-      "143/143 [==============================] - 0s 803us/step - loss: 0.3968 - categorical_accuracy: 0.6469 - val_loss: 0.3916 - val_categorical_accuracy: 0.6564\n",
-      "Epoch 31/40\n",
-      "143/143 [==============================] - 0s 802us/step - loss: 0.3964 - categorical_accuracy: 0.6524 - val_loss: 0.3913 - val_categorical_accuracy: 0.6536\n",
-      "Epoch 32/40\n",
-      "143/143 [==============================] - 0s 785us/step - loss: 0.3960 - categorical_accuracy: 0.6629 - val_loss: 0.3908 - val_categorical_accuracy: 0.6536\n",
-      "Epoch 33/40\n",
-      "143/143 [==============================] - 0s 817us/step - loss: 0.3956 - categorical_accuracy: 0.6622 - val_loss: 0.3905 - val_categorical_accuracy: 0.6564\n",
-      "Epoch 34/40\n",
-      "143/143 [==============================] - 0s 793us/step - loss: 0.3953 - categorical_accuracy: 0.6685 - val_loss: 0.3901 - val_categorical_accuracy: 0.6564\n",
-      "Epoch 35/40\n",
-      "143/143 [==============================] - 0s 789us/step - loss: 0.3949 - categorical_accuracy: 0.6650 - val_loss: 0.3898 - val_categorical_accuracy: 0.6592\n",
-      "Epoch 36/40\n",
-      "143/143 [==============================] - 0s 795us/step - loss: 0.3946 - categorical_accuracy: 0.6741 - val_loss: 0.3894 - val_categorical_accuracy: 0.6564\n",
-      "Epoch 37/40\n",
-      "143/143 [==============================] - 0s 789us/step - loss: 0.3942 - categorical_accuracy: 0.6678 - val_loss: 0.3892 - val_categorical_accuracy: 0.6620\n",
-      "Epoch 38/40\n",
-      "143/143 [==============================] - 0s 849us/step - loss: 0.3939 - categorical_accuracy: 0.6748 - val_loss: 0.3888 - val_categorical_accuracy: 0.6620\n",
-      "Epoch 39/40\n",
-      "143/143 [==============================] - 0s 794us/step - loss: 0.3936 - categorical_accuracy: 0.6769 - val_loss: 0.3885 - val_categorical_accuracy: 0.6592\n",
-      "Epoch 40/40\n",
-      "143/143 [==============================] - 0s 805us/step - loss: 0.3933 - categorical_accuracy: 0.6706 - val_loss: 0.3882 - val_categorical_accuracy: 0.6620\n"
+     "ename": "ValueError",
+     "evalue": "Failed to convert a NumPy array to a Tensor (Unsupported object type float).",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_56992/2444637877.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrings\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_number\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mY_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnumpy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mint32\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     24\u001b[0m \u001b[0mnum_classes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0mY_train\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mto_categorical\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mnum_classes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnum_classes\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.8/site-packages/tensorflow/python/util/traceback_utils.py\u001b[0m in \u001b[0;36merror_handler\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    151\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    152\u001b[0m       \u001b[0mfiltered_tb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_process_traceback_frames\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__traceback__\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 153\u001b[0;31m       \u001b[0;32mraise\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwith_traceback\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfiltered_tb\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    154\u001b[0m     \u001b[0;32mfinally\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    155\u001b[0m       \u001b[0;32mdel\u001b[0m \u001b[0mfiltered_tb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.8/site-packages/tensorflow/python/framework/constant_op.py\u001b[0m in \u001b[0;36mconvert_to_eager_tensor\u001b[0;34m(value, ctx, dtype)\u001b[0m\n\u001b[1;32m    104\u001b[0m       \u001b[0mdtype\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdtypes\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mas_dtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mas_datatype_enum\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    105\u001b[0m   \u001b[0mctx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mensure_initialized\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 106\u001b[0;31m   \u001b[0;32mreturn\u001b[0m \u001b[0mops\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mEagerTensor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mctx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdevice_name\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    107\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    108\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: Failed to convert a NumPy array to a Tensor (Unsupported object type float)."
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<keras.callbacks.History at 0x7fe1602c4400>"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -3314,8 +3229,16 @@
     "# Set the input shape\n",
     "#input_shape = X_train_multiclass_acc_gyro_magnet.shape\n",
     "#print(f'Feature shape: {input_shape}')\n",
+    "labels= ['label:SITTING', 'label:LYING_DOWN','label:OR_standing', 'label:FIX_walking']\n",
     "\n",
-    "X_train = X_train_multiclass_acc_gyro_magnet.dropna()\n",
+    "raw = pd.read_csv('../input/user1.features_labels.csv')\n",
+    "raw = raw.dropna(subset=labels)\n",
+    "\n",
+    "x = raw[raw.columns.drop(raw.filter(regex='label:'))]\n",
+    "y = raw.filter(regex='label:')\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(x, y, test_size=0.25, random_state=42)\n",
+    "\n",
+    "#X_train = X_train_multiclass_acc_gyro_magnet.dropna()\n",
     "input_shape = X_train.shape\n",
     "print(f'Feature shape: {input_shape}')\n",
     "\n",
@@ -3323,13 +3246,11 @@
     "\n",
     "min_max_scaler = preprocessing.MinMaxScaler()\n",
     "X_train_norm = pd.DataFrame(min_max_scaler.fit_transform(X_train))\n",
-    "#X_train_norm=(X_train-X_train.min())/(X_train.max()-X_train.min())\n",
-    "#X_train_norm = preprocessing.scale(X_train, axis=0)\n",
     "\n",
-    "#Y_train = tf.strings.to_number(y_train_multiclass_acc_gyro_magnet)\n",
-    "a = tf.strings.to_number(y_train_multiclass_acc_gyro_magnet).numpy().astype(np.int32)\n",
-    "num_classes = (max(a)+1)\n",
-    "Y_train = to_categorical(a,num_classes = num_classes)\n",
+    "\n",
+    "#a = tf.strings.to_number(Y_train).numpy().astype(np.int32)\n",
+    "num_classes = 4\n",
+    "#Y_train = to_categorical(,num_classes = num_classes)\n",
     "\n",
     "\n",
     "# Create the model\n",
@@ -3349,7 +3270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -3379,7 +3300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3390,7 +3311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3410,7 +3331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3419,7 +3340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3428,7 +3349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -3526,7 +3447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3562,7 +3483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3586,7 +3507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -3729,7 +3650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4230,7 +4151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4344,7 +4265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4353,7 +4274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -4375,7 +4296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4392,7 +4313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4535,7 +4456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -5021,10 +4942,13 @@
  "metadata": {
   "_change_revision": 2,
   "_is_fork": false,
+  "interpreter": {
+   "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+  },
   "kernelspec": {
    "display_name": "Python 3.8.10 64-bit",
    "language": "python",
-   "name": "python3810jvsc74a57bd0916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
