test after ownership transfer

--- a/notebooks/har_2.ipynb
+++ b/notebooks/har_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "eb297043",
    "metadata": {},
    "outputs": [],
@@ -135,9 +135,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "e30ed895",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -626,7 +628,7 @@
        "[2685 rows x 226 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -637,6 +639,78 @@
     "#data.isna().sum()\n",
     "data.drop(columns=['lf_measurements:temperature_ambient'], inplace=True)\n",
     "data[data.columns.drop(data.filter(regex='label:'))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "4879ca47",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['label:LYING_DOWN',\n",
+       " 'label:SITTING',\n",
+       " 'label:FIX_walking',\n",
+       " 'label:FIX_running',\n",
+       " 'label:BICYCLING',\n",
+       " 'label:SLEEPING',\n",
+       " 'label:LAB_WORK',\n",
+       " 'label:IN_CLASS',\n",
+       " 'label:IN_A_MEETING',\n",
+       " 'label:LOC_main_workplace',\n",
+       " 'label:OR_indoors',\n",
+       " 'label:OR_outside',\n",
+       " 'label:IN_A_CAR',\n",
+       " 'label:ON_A_BUS',\n",
+       " 'label:DRIVE_-_I_M_THE_DRIVER',\n",
+       " 'label:DRIVE_-_I_M_A_PASSENGER',\n",
+       " 'label:LOC_home',\n",
+       " 'label:FIX_restaurant',\n",
+       " 'label:PHONE_IN_POCKET',\n",
+       " 'label:OR_exercise',\n",
+       " 'label:COOKING',\n",
+       " 'label:SHOPPING',\n",
+       " 'label:STROLLING',\n",
+       " 'label:DRINKING__ALCOHOL_',\n",
+       " 'label:BATHING_-_SHOWER',\n",
+       " 'label:CLEANING',\n",
+       " 'label:DOING_LAUNDRY',\n",
+       " 'label:WASHING_DISHES',\n",
+       " 'label:WATCHING_TV',\n",
+       " 'label:SURFING_THE_INTERNET',\n",
+       " 'label:AT_A_PARTY',\n",
+       " 'label:AT_A_BAR',\n",
+       " 'label:LOC_beach',\n",
+       " 'label:SINGING',\n",
+       " 'label:TALKING',\n",
+       " 'label:COMPUTER_WORK',\n",
+       " 'label:EATING',\n",
+       " 'label:TOILET',\n",
+       " 'label:GROOMING',\n",
+       " 'label:DRESSING',\n",
+       " 'label:AT_THE_GYM',\n",
+       " 'label:STAIRS_-_GOING_UP',\n",
+       " 'label:STAIRS_-_GOING_DOWN',\n",
+       " 'label:ELEVATOR',\n",
+       " 'label:OR_standing',\n",
+       " 'label:AT_SCHOOL',\n",
+       " 'label:PHONE_IN_HAND',\n",
+       " 'label:PHONE_IN_BAG',\n",
+       " 'label:PHONE_ON_TABLE',\n",
+       " 'label:WITH_CO-WORKERS',\n",
+       " 'label:WITH_FRIENDS']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#data[data.columns.drop(data.filter(regex='label:'))]\n",
+    "data.filter(regex='label:').columns.values.tolist()"
    ]
   },
   {
