--- a/notebooks/experimento_1_base_model.ipynb
+++ b/notebooks/experimento_1_base_model.ipynb
@@ -20,71 +20,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "166fdb89",
+   "execution_count": 5,
+   "id": "0f53c116",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "51"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# definir as labels finais\n",
-    "labels = []"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "56f5ab20",
-   "metadata": {},
-   "source": [
-    "Lying down \n",
-    "Sitting \n",
-    "Walking \n",
-    "Running \n",
-    "Bicycling\n",
-    "Sleeping\n",
-    "Lab work\n",
-    "In class\n",
-    "In a meeting \n",
-    "At main workplace\n",
-    "Indoors \n",
-    "Outside\n",
-    "In a car \n",
-    "On a bus \n",
-    "Drive (I'm the driver) \n",
-    "Drive (I'm a passenger) \n",
-    "At home \n",
-    "At a restaurant\n",
-    "Phone in pocket \n",
-    "Exercise \n",
-    "Cooking\n",
-    "Shopping\n",
-    "Strolling \n",
-    "Drinking (alcohol) \n",
-    "Bathing - shower \n",
-    "Cleaning\n",
-    "Laundry \n",
-    "Washing dishes \n",
-    "Watching TV\n",
-    "Surfing the internet \n",
-    "At a party \n",
-    "At a bar \n",
-    "At the beach \n",
-    "Singing\n",
-    "Talking \n",
-    "Computer work \n",
-    "Eating\n",
-    "Toilet \n",
-    "Grooming \n",
-    "Dressing \n",
-    "At the gym\n",
-    "Stairs - going up\n",
-    "Stairs - going down\n",
-    "Elevator \n",
-    "Standing \n",
-    "At school\n",
-    "Phone in hand\n",
-    "Phone in bag\n",
-    "Phone on table \n",
-    "With co-workers \n",
-    "With friends"
+    "labels = ['label:LYING_DOWN',\n",
+    " 'label:SITTING',\n",
+    " 'label:FIX_walking',\n",
+    " 'label:FIX_running',\n",
+    " 'label:BICYCLING',\n",
+    " 'label:SLEEPING',\n",
+    " 'label:LAB_WORK',\n",
+    " 'label:IN_CLASS',\n",
+    " 'label:IN_A_MEETING',\n",
+    " 'label:LOC_main_workplace',\n",
+    " 'label:OR_indoors',\n",
+    " 'label:OR_outside',\n",
+    " 'label:IN_A_CAR',\n",
+    " 'label:ON_A_BUS',\n",
+    " 'label:DRIVE_-_I_M_THE_DRIVER',\n",
+    " 'label:DRIVE_-_I_M_A_PASSENGER',\n",
+    " 'label:LOC_home',\n",
+    " 'label:FIX_restaurant',\n",
+    " 'label:PHONE_IN_POCKET',\n",
+    " 'label:OR_exercise',\n",
+    " 'label:COOKING',\n",
+    " 'label:SHOPPING',\n",
+    " 'label:STROLLING',\n",
+    " 'label:DRINKING__ALCOHOL_',\n",
+    " 'label:BATHING_-_SHOWER',\n",
+    " 'label:CLEANING',\n",
+    " 'label:DOING_LAUNDRY',\n",
+    " 'label:WASHING_DISHES',\n",
+    " 'label:WATCHING_TV',\n",
+    " 'label:SURFING_THE_INTERNET',\n",
+    " 'label:AT_A_PARTY',\n",
+    " 'label:AT_A_BAR',\n",
+    " 'label:LOC_beach',\n",
+    " 'label:SINGING',\n",
+    " 'label:TALKING',\n",
+    " 'label:COMPUTER_WORK',\n",
+    " 'label:EATING',\n",
+    " 'label:TOILET',\n",
+    " 'label:GROOMING',\n",
+    " 'label:DRESSING',\n",
+    " 'label:AT_THE_GYM',\n",
+    " 'label:STAIRS_-_GOING_UP',\n",
+    " 'label:STAIRS_-_GOING_DOWN',\n",
+    " 'label:ELEVATOR',\n",
+    " 'label:OR_standing',\n",
+    " 'label:AT_SCHOOL',\n",
+    " 'label:PHONE_IN_HAND',\n",
+    " 'label:PHONE_IN_BAG',\n",
+    " 'label:PHONE_ON_TABLE',\n",
+    " 'label:WITH_CO-WORKERS',\n",
+    " 'label:WITH_FRIENDS']\n",
+    "\n",
+    "len(labels)"
    ]
   },
   {
