--- a/notebooks/har_2.ipynb
+++ b/notebooks/har_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "eb297043",
    "metadata": {},
    "outputs": [
@@ -10,11 +10,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-04-11 16:01:59.989921: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:939] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2022-04-11 16:02:00.021076: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudnn.so.8'; dlerror: libcudnn.so.8: cannot open shared object file: No such file or directory\n",
-      "2022-04-11 16:02:00.021092: W tensorflow/core/common_runtime/gpu/gpu_device.cc:1850] Cannot dlopen some GPU libraries. Please make sure the missing libraries mentioned above are installed properly if you would like to use GPU. Follow the guide at https://www.tensorflow.org/install/gpu for how to download and setup the required libraries for your platform.\n",
+      "2022-04-19 11:07:14.647711: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:939] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2022-04-19 11:07:14.676964: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudnn.so.8'; dlerror: libcudnn.so.8: cannot open shared object file: No such file or directory\n",
+      "2022-04-19 11:07:14.676981: W tensorflow/core/common_runtime/gpu/gpu_device.cc:1850] Cannot dlopen some GPU libraries. Please make sure the missing libraries mentioned above are installed properly if you would like to use GPU. Follow the guide at https://www.tensorflow.org/install/gpu for how to download and setup the required libraries for your platform.\n",
       "Skipping registering GPU devices...\n",
-      "2022-04-11 16:02:00.021459: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "2022-04-19 11:07:14.677347: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "2f41ed66",
    "metadata": {},
    "outputs": [],
@@ -2774,13 +2774,7 @@
       "40/40 [==============================] - 0s 1ms/step - loss: 0.1098 - avg_multilabel_BA_2: 0.8057 - val_loss: 0.1158 - val_avg_multilabel_BA_2: 0.8064\n",
       "Epoch 48/100\n",
       "40/40 [==============================] - 0s 1ms/step - loss: 0.1083 - avg_multilabel_BA_2: 0.8071 - val_loss: 0.1162 - val_avg_multilabel_BA_2: 0.8077\n",
-      "Epoch 49/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 49/100\n",
       "40/40 [==============================] - 0s 1ms/step - loss: 0.1071 - avg_multilabel_BA_2: 0.8083 - val_loss: 0.1163 - val_avg_multilabel_BA_2: 0.8090\n",
       "Epoch 50/100\n",
       "40/40 [==============================] - 0s 1ms/step - loss: 0.1067 - avg_multilabel_BA_2: 0.8096 - val_loss: 0.1157 - val_avg_multilabel_BA_2: 0.8103\n",
@@ -3199,13 +3193,7 @@
       "30/30 [==============================] - 0s 2ms/step - loss: 0.0732 - avg_multilabel_BA_2: 0.8582 - val_loss: 0.0950 - val_avg_multilabel_BA_2: 0.8583\n",
       "Epoch 45/100\n",
       "30/30 [==============================] - 0s 1ms/step - loss: 0.0718 - avg_multilabel_BA_2: 0.8585 - val_loss: 0.0936 - val_avg_multilabel_BA_2: 0.8586\n",
-      "Epoch 46/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 46/100\n",
       "30/30 [==============================] - 0s 1ms/step - loss: 0.0706 - avg_multilabel_BA_2: 0.8588 - val_loss: 0.0939 - val_avg_multilabel_BA_2: 0.8589\n",
       "Epoch 47/100\n",
       "30/30 [==============================] - 0s 2ms/step - loss: 0.0707 - avg_multilabel_BA_2: 0.8591 - val_loss: 0.0921 - val_avg_multilabel_BA_2: 0.8593\n",
@@ -3624,13 +3612,7 @@
       "51/51 [==============================] - 0s 1ms/step - loss: 0.0652 - avg_multilabel_BA_2: 0.8936 - val_loss: 0.0849 - val_avg_multilabel_BA_2: 0.8936\n",
       "Epoch 42/100\n",
       "51/51 [==============================] - 0s 1ms/step - loss: 0.0647 - avg_multilabel_BA_2: 0.8937 - val_loss: 0.0858 - val_avg_multilabel_BA_2: 0.8938\n",
-      "Epoch 43/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 43/100\n",
       "51/51 [==============================] - 0s 1ms/step - loss: 0.0648 - avg_multilabel_BA_2: 0.8939 - val_loss: 0.0841 - val_avg_multilabel_BA_2: 0.8940\n",
       "Epoch 44/100\n",
       "51/51 [==============================] - 0s 1ms/step - loss: 0.0638 - avg_multilabel_BA_2: 0.8941 - val_loss: 0.0830 - val_avg_multilabel_BA_2: 0.8942\n",
@@ -4049,13 +4031,7 @@
       "97/97 [==============================] - 0s 1ms/step - loss: 0.1355 - avg_multilabel_BA_2: 0.9079 - val_loss: 0.1445 - val_avg_multilabel_BA_2: 0.9078\n",
       "Epoch 39/100\n",
       "97/97 [==============================] - 0s 1ms/step - loss: 0.1341 - avg_multilabel_BA_2: 0.9078 - val_loss: 0.1457 - val_avg_multilabel_BA_2: 0.9077\n",
-      "Epoch 40/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 40/100\n",
       "97/97 [==============================] - 0s 1ms/step - loss: 0.1340 - avg_multilabel_BA_2: 0.9077 - val_loss: 0.1420 - val_avg_multilabel_BA_2: 0.9076\n",
       "Epoch 41/100\n",
       "97/97 [==============================] - 0s 1ms/step - loss: 0.1326 - avg_multilabel_BA_2: 0.9076 - val_loss: 0.1406 - val_avg_multilabel_BA_2: 0.9075\n",
@@ -4202,7 +4178,8 @@
     "            'df_path': path,\n",
     "            #'df_path': '../full_data/exp_/fold_0/raw_40.csv',\n",
     "            #'neurons_1' : 32, \n",
-    "            #'neurons_2' : 16, \n",
+    "            #'neurons_2' : 16,\n",
+    "            #'from_saved': ../full_data/exp_/saved_model_fold_0,\n",
     "            'labels': labels\n",
     "    }\n",
     "\n",
@@ -4270,8 +4247,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "69c0390c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_3\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " dense_6 (Dense)             (None, 44)                9988      \n",
+      "                                                                 \n",
+      " dense_7 (Dense)             (None, 6)                 270       \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 10,258\n",
+      "Trainable params: 10,258\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "import glob\n",
+    "bas = []\n",
+    "path = '/home/wander/OtherProjects/har_flower/sample_data/0A986513-7828-4D53-AA1F-E02D6DF9561B.features_labels.csv'\n",
+    "config = {\n",
+    "        'df_path': path,\n",
+    "        #'df_path': '../full_data/exp_/fold_0/raw_40.csv',\n",
+    "        #'neurons_1' : 32, \n",
+    "        #'neurons_2' : 16,\n",
+    "        'from_saved': '../full_data/exp_/saved_model_fold_0',\n",
+    "        'labels': labels\n",
+    "}\n",
+    "\n",
+    "har = utils.HAR(config)\n",
+    "#test_results, ba = har.run()\n",
+    "#model, best_hps, best_epoch, test_results, ba = har.hypertunning()\n",
+    "#bas.append(ba.numpy())\n",
+    "\n",
+    "\n",
+    "#print(bas)\n",
+    "har.mlp.model.summary()  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a14ac76",
    "metadata": {},
    "outputs": [],
    "source": []
