--- a/android/client/app/src/main/res/values/strings.xml
+++ b/android/client/app/src/main/res/values/strings.xml
@@ -24,4 +24,12 @@
 
     </string-array>
 
+    <string-array name="n_components">
+        <item>5</item>
+        <item>10</item>
+        <item>15</item>
+        <item>20</item>
+
+    </string-array>
+
 </resources>
